--- a/index.ipynb
+++ b/index.ipynb
@@ -131,7 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "italy = cou\n",
+    "italy = countries[2]\n",
     "italy"
    ]
   },
