--- a/index.ipynb
+++ b/index.ipynb
@@ -294,13 +294,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "countries[6] = 'USA'"
+    "countries[6] = 'USA'\n"
    ]
   },
   {
