--- a/index.ipynb
+++ b/index.ipynb
@@ -420,7 +420,7 @@
    },
    "outputs": [],
    "source": [
-    "unique_countries = set()"
+    "unique_countries = set(unique_countries)"
    ]
   },
   {
