--- a/index.ipynb
+++ b/index.ipynb
@@ -466,7 +466,7 @@
    },
    "outputs": [],
    "source": [
-    "num_of_repeats = len(countries) - len(uniq)\n",
+    "num_of_repeats = len(countries) - len(unique_countries)\n",
     "num_of_repeats # 3"
    ]
   },
